src/test/deca/context/valid/SansObjet/DeclVar-Minus-float-float-int.deca
// Description:
//    Declaration of a float variable using - operation between a float variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  0.1; 
    int y = 10; 
    float z = 0.1 - 10; 
}
