src/test/deca/context/invalid/SansObjet/DeclVar-Minus-string-string-float.deca
// Description:
//    Declaration of a string variable using - operation between a string variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    string x =  "Hello"; 
    float y = 10.01; 
    string z = x - y ; 
}
